# vsgOcct

./: .gitignore  CMakeLists.txt  README.md  README_EN.md  ROADMAP.md
docs/codex/: 2026-03-17-hover-selected-layering.md  2026-03-17-material-preset-viewer.md  2026-03-17-pbr-mvp-phase1-2.md  2026-03-17-picking-development-log.md  2026-03-17-primitive-highlight-phase2.md
docs/superpowers/plans/: 2026-03-12-m0a-step-model-loader-split.md  2026-03-13-googletest-infrastructure.md  2026-03-13-m1a-assembly-tree.md  2026-03-16-face-picking.md  2026-03-18-stl-reader.md
docs/superpowers/specs/: 2026-03-12-m0a-step-model-loader-split-design.md  2026-03-13-googletest-infrastructure-design.md  2026-03-13-m1a-assembly-tree-design.md  2026-03-16-face-picking-design.md  2026-03-18-stl-reader-design.md
examples/: CMakeLists.txt
examples/vsgqt_step_viewer/: CMakeLists.txt  main.cpp
include/vsgocct/: ModelLoader.h  ShapeId.h  StepModelLoader.h  StepSceneData.h
include/vsgocct/cad/: MaterialTypes.h  StepReader.h  StlReader.h
include/vsgocct/mesh/: ShapeMesher.h  StlMeshBuilder.h
include/vsgocct/pick/: FaceIdCodec.h  PickHandler.h  SelectionManager.h
include/vsgocct/scene/: PickQuery.h  SceneBuilder.h
include/vsgocct/selection/: ScenePicker.h  SelectionToken.h
src/: CMakeLists.txt
src/vsgocct/: CMakeLists.txt  ModelLoader.cpp  StepModelLoader.cpp
src/vsgocct/cad/: StepReader.cpp  StlReader.cpp
src/vsgocct/mesh/: ShapeMesher.cpp  StlMeshBuilder.cpp
src/vsgocct/pick/: PickHandler.cpp  SelectionManager.cpp
src/vsgocct/scene/: PickQuery.cpp  SceneBuilder.cpp
src/vsgocct/selection/: ScenePicker.cpp
tests/: CMakeLists.txt  generate_test_data.cpp  test_face_id_codec.cpp  test_helpers.h  test_model_loader.cpp  test_scene_builder.cpp  test_scene_picker.cpp  test_shape_mesher.cpp  test_step_reader.cpp  test_stl_mesh_builder.cpp  test_stl_reader.cpp
tests/data/: assembly.step  box.step  colored_box.step  cube.stl  cube_binary.stl  nested_assembly.step  shared_instances.step
